Place reply toggle beside date and fix collapse lookup

--- a/templates/questions/_comment.html
+++ b/templates/questions/_comment.html
@@ -1,6 +1,8 @@
 <li class="hn-comment">
     <div class="hn-comment-meta">
-        <span class="hn-comment-meta-text">{{ comment.author.username }} · {{ comment.created_at|date:"M j, Y" }}</span>
+        <span class="hn-comment-author">{{ comment.author.username }}</span>
+        <span class="hn-comment-sep">·</span>
+        <span class="hn-comment-date">{{ comment.created_at|date:"M j, Y" }}</span>
         {% if comment.children %}
             <button class="hn-reply-toggle" type="button" aria-expanded="true" aria-label="Collapse replies">−</button>
         {% endif %}
