--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -10,15 +10,36 @@
             <div class="hn-field">
                 <label for="id_username">Username</label>
                 {{ form.username }}
+                {% if form.username.errors %}
+                    <div class="error">{{ form.username.errors }}</div>
+                {% endif %}
             </div>
             <div class="hn-field">
                 <label for="id_password1">Password</label>
                 {{ form.password1 }}
+                {% if form.password1.errors %}
+                    <div class="error">{{ form.password1.errors }}</div>
+                {% endif %}
+                <small class="help-text">
+                    Password must be at least 12 characters and contain:
+                    <ul style="margin: 0.5em 0; padding-left: 1.5em;">
+                        <li>One uppercase letter</li>
+                        <li>One lowercase letter</li>
+                        <li>One digit</li>
+                        <li>One special character (!@#$%^&*()_+-=[]{}|;:,.<>?)</li>
+                    </ul>
+                </small>
             </div>
             <div class="hn-field">
                 <label for="id_password2">Confirm</label>
                 {{ form.password2 }}
+                {% if form.password2.errors %}
+                    <div class="error">{{ form.password2.errors }}</div>
+                {% endif %}
             </div>
+            {% if form.non_field_errors %}
+                <div class="error">{{ form.non_field_errors }}</div>
+            {% endif %}
             <button class="hn-button" type="submit">Signup</button>
         </form>
     </section>
