--- a/static/css/hn.css
+++ b/static/css/hn.css
@@ -71,6 +71,24 @@ a:hover {
     gap: 6px;
 }
 
+.hn-logout-form {
+    display: inline;
+    margin: 0;
+}
+
+.hn-link-button {
+    background: none;
+    border: 0;
+    padding: 0;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+}
+
+.hn-link-button:hover {
+    text-decoration: underline;
+}
+
 .hn-sep {
     color: #fff;
 }
