Clear reply draft on cancel

--- a/templates/questions/question_detail.html
+++ b/templates/questions/question_detail.html
@@ -109,6 +109,7 @@
                 if (parentInput) parentInput.value = '';
                 if (replyingName) replyingName.textContent = '';
                 if (replyingTo) replyingTo.hidden = true;
+                if (commentBody) commentBody.value = '';
             };
 
             replyButtons.forEach((button) => {
